[package]
name = "stickermakerrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

image = "0.23.14"
imageproc = "0.23.0"
rayon = "1.5"

[target.x86_64-pc-windows-gnu.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
kernel32-sys = "0.2"

